# web-insight

./: .env.example  .gitignore  README.md  main.py  my_key.txt  plan.md  pyproject.toml  requirements.txt  test_truncated_json.py  作业说明.md
docs/: INTERVIEW_PLAN.md  INTERVIEW_PREP.md  WORKFLOW.md
docs/superpowers/plans/: 2026-06-05-web-insight-enhancement.md
src/: exceptions.py
src/agent/: action_merger.py  factory.py  judge.py  loop.py  loop_detector.py  loop_v2.py  message_manager.py  planner.py  planning.py  prompts.py  router.py  service.py  tool_prioritizer.py  views.py
src/browser/: manager.py  session.py  stealth.py  watchdogs.py
src/config/: settings.py
src/dom/: serializer.py  service.py  views.py
src/llm/: __init__.py  client.py  factory.py
src/memory/: history.py  task_memory.py
src/perception/: dom.py  dom_service.py  vision.py
src/schemas/: __init__.py  tool_result.py  vision.py
src/tools/: __init__.py  browser_actions.py  browser_tools.py  dom_tools.py  file_tools.py  models.py  registry.py  time_tool.py  vision_tool.py
test/: test_action_result.py  test_agent_prompts.py  test_agent_service.py  test_agent_views.py  test_dom_serializer.py  test_dom_service.py  test_dom_views.py  test_judge.py  test_loop_detector.py  test_message_manager.py  test_planning.py  test_runoob.py  test_session.py  test_task_router.py  test_time_tool.py
test_scripts/: test_bilibili.py  test_zhihu.py
