[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-insight"
version = "0.1.0"
description = "Web Agent based on LangGraph and visual perception"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "test*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
